# Tourism-data-analysis

./: .gitignore  README.md  pyproject.toml
data/inter/: 2024年Q2andQ3_個票データ（支出金額）_processed.xlsx
notebooks/: 01_processed_survey.ipynb  02_expe_amt_processed.ipynb
references/: country_code_list.xlsx  nationality_region_list.xlsx  paymnt_amount_list.xlsx  prefectures_visited_list.xlsx  survey_column_list.xlsx
setting/: path.yaml
